# code-best-practices

./: .gitignore  CLAUDE.md  README.md  classify_patterns.py  compile.py  conductor-prompts.md  conductor.json  extract.py  modules.yaml  patterns.json  pyproject.toml  query.graphql  review-batch-1.json  review-batch-10.json  review-batch-11.json  review-batch-12.json  review-batch-13.json  review-batch-14.json  review-batch-15.json  review-batch-16.json  review-batch-17.json  review-batch-18.json  review-batch-19.json  review-batch-2.json  review-batch-20.json  review-batch-21.json  review-batch-22.json  review-batch-23.json  review-batch-24.json  review-batch-25.json  review-batch-26.json  review-batch-27.json  review-batch-28.json  review-batch-29.json  review-batch-3.json  review-batch-4.json  review-batch-5.json  review-batch-6.json  review-batch-7.json  review-batch-8.json  (+5 more)
demo/: bad-code.tsx  codegen-with-rules.md  codegen-without-rules.md  review-with-rules.md  review-without-rules.md  run-codegen-comparison.sh  run-comparison.sh
extract/: __init__.py  __main__.py  analyze.py  claude.py  cli.py  constants.py  dedup.py  enrich.py  enrich_hooks.py  fetch.py  merge.py  modules.py  reclass.py  report.py  triage.py  validate.py
prompts/: batch-1-prompt.md  batch-10-prompt.md  batch-11-prompt.md  batch-12-prompt.md  batch-13-prompt.md  batch-14-prompt.md  batch-15-prompt.md  batch-16-prompt.md  batch-17-prompt.md  batch-18-prompt.md  batch-19-prompt.md  batch-2-prompt.md  batch-20-prompt.md  batch-21-prompt.md  batch-22-prompt.md  batch-23-prompt.md  (+14 more)
(+182 files in other folders)
